--- a/TeamMonstersProject/.classpath
+++ b/TeamMonstersProject/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="C:/tomcat7.0/apache-tomcat-7.0.109/lib/jsp-api.jar"/>
 	<classpathentry kind="lib" path="C:/tomcat7.0/apache-tomcat-7.0.109/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/tomcat7.0/apache-tomcat-7.0.109/lib/jstl-1.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
